impl/EZP-22163 Implemented user/sessions/<id>/refresh plus refactoring of user/sessions. Specifications have also been updated

--- a/eZ/Bundle/EzPublishRestBundle/Resources/config/routing.yml
+++ b/eZ/Bundle/EzPublishRestBundle/Resources/config/routing.yml
@@ -1044,6 +1044,11 @@ ezpublish_rest_deleteSession:
         _controller: ezpublish_rest.controller.user:deleteSession
     methods: [DELETE]
 
+ezpublish_rest_refreshSession:
+    path: /user/sessions/{sessionId}/refresh
+    defaults:
+        _controller: ezpublish_rest.controller.user:refreshSession
+    methods: [POST]
 
 
 # URL aliases
